--- a/ver15/src/app/app.component.html
+++ b/ver15/src/app/app.component.html
@@ -1,6 +1,4 @@
 <div class="content" role="main">
-  <nav>
-    <a routerLink="/user">user</a>
-  </nav>
+  <nav><a routerLink="/user">user</a> | <a routerLink="/book">book</a> |</nav>
 </div>
 <router-outlet></router-outlet>
