--- a/ver15/src/app/app.component.html
+++ b/ver15/src/app/app.component.html
@@ -1,4 +1,9 @@
 <div class="content" role="main">
   <nav><a routerLink="/user">user</a> | <a routerLink="/book">book</a> |</nav>
+  <li>
+    <app-user></app-user>
+    <app-user></app-user>
+    <app-user></app-user>
+  </li>
 </div>
 <router-outlet></router-outlet>
